part-3/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: wil-playground
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
