part-3/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
